--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React Parcel</title>
+    <link rel="stylesheet" href="../src/index.scss" />
 </head>
 <body>
     <div id="app"></div>
-    <script src="../src/index.tsx" ></script>
+    <script type="module" src="../src/index.tsx" ></script>
 </body>
 </html>
